--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 
 <?php 
 include '../Includes/dbcon.php';
@@ -16,7 +18,7 @@ include '../Includes/session.php';
 
 
 ?>
-
+    
 <!DOCTYPE html>
 <html lang="en">
 
